// Copyright 2019 Blockchain Technology Partners
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
// -----------------------------------------------------------------------------

syntax = "proto3";

option java_multiple_files = true;
package com.blockchaintp.sawtooth.timekeeper.protobuf;
import "google/protobuf/timestamp.proto";

enum TimeKeeperVersion {
  V_1_0 = 0;
  V_2_0 = 1;
}

message TimeKeeperUpdate {
    google.protobuf.Timestamp timeUpdate=1;
    TimeKeeperVersion version = 2;
    int32 maxHistory = 3;
    int32 maxDeviation = 4;
}

message TimeKeeperEvent {
    google.protobuf.Timestamp timeUpdate=1;
}

message TimeKeeperRecord {
    google.protobuf.Timestamp lastCalculatedTime=1;
    repeated google.protobuf.Timestamp timeHistory=2;
    TimeKeeperVersion version = 3;
    int32 maxHistory = 4;
    int32 maxDeviation = 5;
}

message TimeKeeperGlobalRecord {
    google.protobuf.Timestamp lastCalculatedTime=1;
    repeated google.protobuf.Timestamp timeHistory=2;
    repeated TimeKeeperParticipant participant=3;
    TimeKeeperVersion version = 4;
}

message TimeKeeperParticipant {
    bytes participantPublicKey = 1;
    google.protobuf.Timestamp lastCalculatedTime=2;
    TimeKeeperVersion version = 3;
    int32 maxDeviation = 4;
}
